# dmdoc-python

./: .gitignore  README.md  pyproject.toml
dmdoc/: README.md  pyproject.toml
docs/: dmdoc-python.drawio
scripts/: README.md  run_command.py
scripts/data/format/: markdown-format.yaml
scripts/data/output/markdown/: beanie.md  sqlalchemy-declarative.md  sqlalchemy-imperative.md
scripts/data/source/: beanie.yaml  sqlalchemy-declarative.yaml  sqlalchemy-imperative.yaml
scripts/source/: beanie_model.py  sqlalchemy-source.yaml  sqlalchemy_model.py
src/dmdoc/cli/: entrypoints.py  generate_cli.py
src/dmdoc/core/: generator.py
src/dmdoc/core/format/: __init__.py  _format.py  markdown_format.py
src/dmdoc/core/formatter/: __init__.py  formatter.py  markdown_formatter.py
src/dmdoc/core/sink/: data_type.py  model.py  util.py
src/dmdoc/core/source/: __init__.py  _source.py  beanie_source.py  pydantic_source.py  source.py  sqlalchemy_source.py
src/dmdoc/utils/: envvars.py  exception.py  file.py  importing.py  logging_manager.py
test/: test_beanie.py  test_generate.py  test_markdown.py  test_sqlalchemy.py
test/resource/: test_markdown.md
test/resource/format/: markdown-format.yaml
test/resource/source/: sqlalchemy-source.yaml
test/source/: beanie_model.py  sqlalchemy_model.py
