[build-system]
requires = ["setuptools >= 80.7.1"]
build-backend = "setuptools.build_meta"

[project]
name='dmdoc-python'
version = '0.1'
description = "Data Model documentation generator."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'click>=8.2.0',
    'pydantic>=2.11.4',
    'beanie>=1.29',
    'sqlalchemy>=2.0.41',
    'mdutils>=1.6',
    'markdown>=3.8'
]

[tool.setuptools.package-dir]
logmaster = "./src/dmdoc"
